Fixed grid alignment and size

--- a/finds_viewer/src/finds_viewer/static/styles.css
+++ b/finds_viewer/src/finds_viewer/static/styles.css
@@ -69,7 +69,7 @@
 
 .card-container {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); /* Responsive columns */
+    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); /* Responsive columns */
     gap: 0px; /* Consistent spacing between cards */
     justify-content: center;
 }
@@ -129,8 +129,8 @@
 }
 
 .expandable-card.collapsed {
-    width: 300px;
-    height: 300px;
+    width: 200px;
+    height: 200px;
     margin: auto;
     display: flex;
     align-items: center;
